# functools_plus

./: README.md  pyproject.toml
functools_plus/: __init__.py
more_functools/: __init__.py  __main__.py
pyhof/: __init__.py
tests/: test_functools_plus.py  test_more_functools.py  test_pyhof.py
