[tool.poetry]
name = "more-functools"
version = "0.1.1"
description = "More functools library for python"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PyGamer0/more-functools"
repository = "https://github.com/PyGamer0/more-functools"
authors = ["PyGamer0"]

[tool.poetry.dependencies]
python = ">3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
